@@ -1,121 +1,134 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <window id="100">
-	<defaultcontrol always="true">10</defaultcontrol>
-	<coordinates>
-		<system>1</system>
-		<posx>335</posx>
-		<posy>230</posy>
-	</coordinates>
-	<include>dialogeffect</include>
-	<controls>
-		<control type="image">
-			<posx>0</posx>
-			<posy>0</posy>
-			<width>610</width>
-			<height>240</height>
-			<texture border="40">DialogBack.png</texture>
-		</control>
-		<control type="image">
-			<description>Dialog Header image</description>
-			<posx>40</posx>
-			<posy>16</posy>
-			<width>530</width>
-			<height>40</height>
-			<texture>dialogheader.png</texture>
-		</control>
-		<control type="label" id="1">
-			<description>header label</description>
-			<posx>40</posx>
-			<posy>20</posy>
-			<width>530</width>
-			<height>30</height>
-			<font>font13_title</font>
-			<label>$LOCALIZE[13406]</label>
-			<align>center</align>
-			<aligny>center</aligny>
-			<textcolor>selected</textcolor>
-			<shadowcolor>black</shadowcolor>
-		</control>
-		<control type="button">
-			<description>Close Window button</description>
-			<posx>520</posx>
-			<posy>15</posy>
-			<width>64</width>
-			<height>32</height>
-			<label>-</label>
-			<font>-</font>
-			<onclick>PreviousMenu</onclick>
-			<texturefocus>DialogCloseButton-focus.png</texturefocus>
-			<texturenofocus>DialogCloseButton.png</texturenofocus>
-			<onleft>10</onleft>
-			<onright>10</onright>
-			<onup>10</onup>
-			<ondown>10</ondown>
-			<visible>system.getbool(input.enablemouse)</visible>
-		</control>
-		<control type="label" id="2">
-			<description>dialog line 1</description>
-			<posx>30</posx>
-			<posy>60</posy>
-			<width>550</width>
-			<height>30</height>
-			<align>left</align>
-			<aligny>center</aligny>
-			<label>-</label>
-			<font>font13</font>
-		</control>
-		<control type="label" id="3">
-			<description>dialog line 2</description>
-			<posx>30</posx>
-			<posy>85</posy>
-			<width>550</width>
-			<height>30</height>
-			<align>left</align>
-			<aligny>center</aligny>
-			<label>-</label>
-			<font>font13</font>
-		</control>
-		<control type="label" id="4">
-			<description>dialog line 3</description>
-			<posx>30</posx>
-			<posy>110</posy>
-			<width>550</width>
-			<height>30</height>
-			<align>left</align>
-			<aligny>center</aligny>
-			<label>-</label>
-			<font>font13</font>
-		</control>
-		<control type="button" id="11">
-			<description>Yes button</description>
-			<posx>95</posx>
-			<posy>175</posy>
-			<width>200</width>
-			<height>40</height>
-			<label>107</label>
-			<font>font12_title</font>
-			<textcolor>white</textcolor>
-			<focusedcolor>white</focusedcolor>
-			<align>center</align>
-			<onleft>10</onleft>
-			<onright>10</onright>
-			<onup>11</onup>
-			<ondown>11</ondown>
-		</control>
-		<control type="button" id="10">
-			<description>No button</description>
-			<posx>305</posx>
-			<posy>175</posy>
-			<width>200</width>
-			<height>40</height>
-			<label>106</label>
-			<font>font12_title</font>
-			<textcolor>white</textcolor>
-			<focusedcolor>white</focusedcolor>
-			<align>center</align>
-			<onleft>11</onleft>
-			<onright>11</onright>
-			<onup>10</onup>
-			<ondown>10</ondown>
-		</control>
-	</controls>
+  <defaultcontrol always="true">10</defaultcontrol>
+  <coordinates>
+    <system>1</system>
+    <posx>335</posx>
+    <posy>230</posy>
+  </coordinates>
+  <include>dialogeffect</include>
+  <controls>
+    <control type="group">
+      <animation type="WindowClose">
+        <effect type="zoom" start="150" end="0" center="300,200" time="200"></effect>
+        <effect_off type="slide" start="0,-80" time="200" />
+        <effect type="fade" time="250"></effect>
+      </animation>
+      <animation type="WindowOpen">
+        <effect type="zoom" start="0" end="150" center="300,200" time="200"></effect>
+        <effect_off type="slide" end="0,-80" time="0" />
+        <effect type="fade" time="250"></effect>
+      </animation>
+      <control type="image">
+        <posx>0</posx>
+        <posy>0</posy>
+        <width>610</width>
+        <height>240</height>
+        <texture border="40">DialogBack.png</texture>
+      </control>
+      <control type="image">
+        <description>Dialog Header image</description>
+        <posx>40</posx>
+        <posy>16</posy>
+        <width>530</width>
+        <height>40</height>
+        <texture>dialogheader.png</texture>
+      </control>
+      <control type="label" id="1">
+        <description>header label</description>
+        <posx>40</posx>
+        <posy>20</posy>
+        <width>530</width>
+        <height>30</height>
+        <font>font13_title</font>
+        <label>$LOCALIZE[13406]</label>
+        <align>center</align>
+        <aligny>center</aligny>
+        <textcolor>selected</textcolor>
+        <shadowcolor>black</shadowcolor>
+      </control>
+      <control type="button">
+        <description>Close Window button</description>
+        <posx>520</posx>
+        <posy>15</posy>
+        <width>64</width>
+        <height>32</height>
+        <label>-</label>
+        <font>-</font>
+        <onclick>PreviousMenu</onclick>
+        <texturefocus>DialogCloseButton-focus.png</texturefocus>
+        <texturenofocus>DialogCloseButton.png</texturenofocus>
+        <onleft>10</onleft>
+        <onright>10</onright>
+        <onup>10</onup>
+        <ondown>10</ondown>
+        <visible>system.getbool(input.enablemouse)</visible>
+      </control>
+      <control type="label" id="2">
+        <description>dialog line 1</description>
+        <posx>30</posx>
+        <posy>60</posy>
+        <width>550</width>
+        <height>30</height>
+        <align>left</align>
+        <aligny>center</aligny>
+        <label>-</label>
+        <font>font13</font>
+      </control>
+      <control type="label" id="3">
+        <description>dialog line 2</description>
+        <posx>30</posx>
+        <posy>85</posy>
+        <width>550</width>
+        <height>30</height>
+        <align>left</align>
+        <aligny>center</aligny>
+        <label>-</label>
+        <font>font13</font>
+      </control>
+      <control type="label" id="4">
+        <description>dialog line 3</description>
+        <posx>30</posx>
+        <posy>110</posy>
+        <width>550</width>
+        <height>30</height>
+        <align>left</align>
+        <aligny>center</aligny>
+        <label>-</label>
+        <font>font13</font>
+      </control>
+      <control type="button" id="11">
+        <description>Yes button</description>
+        <posx>95</posx>
+        <posy>175</posy>
+        <width>200</width>
+        <height>40</height>
+        <label>107</label>
+        <font>font12_title</font>
+        <textcolor>white</textcolor>
+        <focusedcolor>white</focusedcolor>
+        <align>center</align>
+        <onleft>10</onleft>
+        <onright>10</onright>
+        <onup>10</onup>
+        <ondown>10</ondown>
+      </control>
+      <control type="button" id="10">
+        <description>No button</description>
+        <posx>305</posx>
+        <posy>175</posy>
+        <width>200</width>
+        <height>40</height>
+        <label>106</label>
+        <font>font12_title</font>
+        <textcolor>white</textcolor>
+        <focusedcolor>white</focusedcolor>
+        <align>center</align>
+        <onleft>11</onleft>
+        <onright>11</onright>
+        <onup>11</onup>
+        <ondown>11</ondown>
+      </control>
+    </control>
+  </controls>
 </window>
