@@ -1,3 +1,6 @@
+[B]3.1.7[/B]
+- dialog yes no increased with zoom
+
 [B]3.1.6[/B]
 
 - added some scripts
